product_docs/docs/net_connector/10.0.1.1/14_using_plugins.mdx
---
title: "Using plugins"

---

<div id="using_plugins" class="registered_link"></div>

EDB .NET Connector plugins support the enhanced capabilities for different data types that are otherwise not directly available using only the default type mappings. The different plugins available support:

- GeoJSON
- Json.NET
- NetTopologySuite
- NodaTime
- Dependency Injection
- OpenTelemetry

The plugins support the use of spatial, data/time, and JSON types. The following are the supported frameworks and data provider installation path for these plugins.

Note that the plugins are also [available on NuGet](https://www.nuget.org/profiles/EnterpriseDB). See our blog post on [Using EDB .NET Connector with NuGet](https://www.enterprisedb.com/blog/improving-developer-experience-updated-edb-net-connector-now-published-nuget) for more information.

## GeoJSON

If you're using the GeoJSON plugin on .NET Standard 2.0, the data provider installation paths are: 

- `C:\Program Files\edb\dotnet\plugins\GeoJSON\netstandard2.0`
- `C:\Program Files\edb\dotnet\plugins\GeoJSON\net472`
- `C:\Program Files\edb\dotnet\plugins\GeoJSON\net48`
- `C:\Program Files\edb\dotnet\plugins\GeoJSON\net481`

The following shared library files are required:

- `EnterpriseDB.EDBClient.GeoJSON.dll`

For detailed information about using the GeoJSON plugin, see the [Npgsql documentation](http://www.npgsql.org/doc/types/geojson.html).

## Json.NET

If you're using the Json.NET plugin on .NET Standard 2.0, the data provider installation paths are:
- `C:\Program Files\edb\dotnet\plugins\Json.NET\netstandard2.0`
- `C:\Program Files\edb\dotnet\plugins\Json.NET\net472`
- `C:\Program Files\edb\dotnet\plugins\Json.NET\net48`
- `C:\Program Files\edb\dotnet\plugins\Json.NET\net481`

The following shared library files are required:

- `EnterpriseDB.EDBClient.Json.NET.dll`

For detailed information about using the Json.NET plugin, see the [Npgsql documentation](http://www.npgsql.org/doc/types/jsonnet.html).

## OpenTelemetry


!!!note

   OpenTelemetry metrics differ from Npgsql community driver:
   - `db.system.name` is set to `edb_postgresql` instead of `postgresql`
   - `db.namespace` is set to `edb-dotnet` instead of `npgsql`
   - All metrics are prefixed with `db.edb_dotnet.` instead of `db.npgsql.`
   

If you're using the OpenTelemetry plugin on .NET Standard 2.0, the data provider installation paths are:
- `C:\Program Files\edb\dotnet\plugins\OpenTelemetry\netstandard2.0`
- `C:\Program Files\edb\dotnet\plugins\OpenTelemetry\net472`
- `C:\Program Files\edb\dotnet\plugins\OpenTelemetry\net48`
- `C:\Program Files\edb\dotnet\plugins\OpenTelemetry\net481`

The following shared library files are required:

- `EnterpriseDB.EDBClient.OpenTelemetry.dll`

## NetTopologySuite

If you're using the NetTopologySuite plugin on .Net Standard 2.0, the data provider installation paths are:
- `C:\Program Files\edb\dotnet\plugins\NetTopologySuite\netstandard2.0`
- `C:\Program Files\edb\dotnet\plugins\NetTopologySuite\net472`
- `C:\Program Files\edb\dotnet\plugins\NetTopologySuite\net48`
- `C:\Program Files\edb\dotnet\plugins\NetTopologySuite\net481`

The following shared library files are required:

- `EnterpriseDB.EDBClient.NetTopologySuite.dll`

For detailed information about using the NetTopologySuite type plugin, see the [Npgsql documentation](http://www.npgsql.org/doc/types/nts.html).

## NodaTime

If you're using the NodaTime plugin on .Net Standard 2.0, the data provider installation paths are: 
- `C:\Program Files\edb\dotnet\plugins\NodaTime\netstandard2.0`
- `C:\Program Files\edb\dotnet\plugins\NodaTime\net472`
- `C:\Program Files\edb\dotnet\plugins\NodaTime\net48`
- `C:\Program Files\edb\dotnet\plugins\NodaTime\net481`

The following shared library files are required:

- `EnterpriseDB.EDBClient.NodaTime.dll`

For detailed information about using the NodaTime plugin, see the [Npgsql documentation](http://www.npgsql.org/doc/types/nodatime.html).

## Available plugins on NuGet

See our blog post on [Using EDB .NET Connector with NuGet](https://www.enterprisedb.com/blog/improving-developer-experience-updated-edb-net-connector-now-published-nuget) for more information.

| EDB NuGet package ID                                                    | Description                                                                                                                                    |
|-------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------|
| EnterpriseDB.EDBClient                                                  | Core EDB .NET Connector                                                                                                                        |
| EnterpriseDB.EDBClient.DependencyInjection                              | Dependency Injection helpers for EDB .NET Connector<br/>(.NET Core only)                                                                       |
| EnterpriseDB.EDBClient.EntityFrameworkCore.PostgreSQL                   | Entity Framework Core driver<br/>(.NET Core only)                                                                                              |
| EnterpriseDB.EDBClient.Json.NET                                         | Json.NET plugin for EDB .NET Connector, allowing transparent serialization/deserialization of JSON objects directly to and from the database.  |
| EnterpriseDB.EDBClient.NodaTime                                         | NodaTime plugin for EDB .NET Connector, allowing mapping of PostgreSQL date/time types to NodaTime types.                                      |
| EnterpriseDB.EDBClient.NetTopologySuite                                 | NetTopologySuite plugin for Npgsql, allowing mapping of PostGIS geometry types to NetTopologySuite types.                                      |
| EnterpriseDB.EDBClient.EntityFrameworkCore.PostgreSQL.NetTopologySuite  | NetTopologySuite PostGIS spatial support plugin for PostgreSQL/EDB .NET Connector Entity Framework Core provider.<br/>(.NET Core only)         |
| EnterpriseDB.EDBClient.EntityFrameworkCore.PostgreSQL.NodaTime          | NodaTime support plugin for PostgreSQL/EDB .NET Connector Entity Framework Core provider.<br/>(.NET Core only)                                 |

To install one of those plugins packages, simply add a package reference using Visual Studio IDE or using the .NET CLI.
